@@ -32,6 +32,8 @@ Interface changes
 
 ### New and changed callbacks
 
+- Added solution notification callback for nonlinear handlers.
+
 ### Deleted and changed API methods
 
 - SCIPtpiInitLock(), SCIPtpiDestroyLock(), SCIPtpiInitCondition(), SCIPtpiDestroyCondition() now take a double
@@ -52,6 +54,7 @@ Interface changes
 - SCIPsetParam()
 - SCIPgetPrimalDualIntegral() returns the primal dual integral stored in the statistics
 - SCIPgetNLPNlRowsStat() to retrieve counts on linear, convex, and nonconvex rows in NLP
+- SCIPnlhdlrSetSolnotify(), SCIPnlhdlrHasSolnotify()
 
 ### Command line interface
 
